@@ -6,6 +6,12 @@
   or spelling correction your name will probably not be listed.)
 
 ****************************   Release 1.1 ******************************
+pam-script 1.1.4		Jeroen Nijhof	<jeroen@nijhofnet.nl>
+	* fixed bug 2871389 - pam_sm_chauthtok() should first set
+	  PAM_OLDAUTHTOK and not PAM_AUTHTOK. PAM_AUTHTOK should
+	  contain the new password.
+	* pam_sm_chauthtok() - Don't ask current password for user root.
+
 pam-script 1.1.3		R.K. Owen	<rkowen@nersc.gov>
 	* fixed bugs 2787860 - extra echo in driver script &
 	* 2784468 - leaked PAM_* env.vars. (thanks to yvan-seth)
